--- a/environment.yml
+++ b/environment.yml
@@ -5,13 +5,18 @@ channels:
     - pytorch
 
 dependencies:
-    - pip==21.2.2
     - python>=3.8
+    - pip==21.2.2
+    - pytest>=6.2.2
     - numpy
     - pytorch
-    - pre-commit==2.13.0
     - coverage==5.5
+    - pre-commit==2.13.0
     - pip:
         - jax>=0.1.71
-        - jax>=0.1.49
         - optax
+        - sphinx>=3.4.3
+        - nbsphinx>=0.8.1
+        - nbsphinx-link>=1.3.0
+        - sphinx-rtd-theme>=0.5.1
+        - sphinx-autoapi>=1.8.3
