--- a/.github/workflows/tests-conda.yml
+++ b/.github/workflows/tests-conda.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Test with pytest and generate coverage report
       shell: bash -l {0}
       run: |
-        coverage run -m pytest -m "not slow"
+        coverage run -m pytest -m
         coverage xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
