--- a/environment.yml
+++ b/environment.yml
@@ -20,3 +20,4 @@ dependencies:
         - nbsphinx-link>=1.3.0
         - sphinx-rtd-theme>=0.5.1
         - sphinx-autoapi>=1.8.3
+        - ipython
