Fix pipeline instantiation in config and task.py

--- a/ssljax/config/default-conf/config.yaml
+++ b/ssljax/config/default-conf/config.yaml
@@ -39,11 +39,11 @@ meter:
 pipeline:
   branches:
     0:
-      name: "ByolOnlinePipeline"
-      params:
+      name: "BYOLOnlinePipeline"
+      params: {}
     1:
-      name: "ByolTargetPipeline"
-      params:
+      name: "BYOLTargetPipeline"
+      params: {}
 
 dataloader:
   name: a 
