--- a/tests/train/conf/cpu_conf.yaml
+++ b/tests/train/conf/cpu_conf.yaml
@@ -2,6 +2,9 @@ env:
   seed: 1337
   numpy_seed: 1337
   jax_seed: 1337
+  half_precision: False
+  checkpoint: False
+  input_shape: 28
 
 trainer:
   name: SSLTrainer
