--- a/tests/train/conf/cpu_conf.yaml
+++ b/tests/train/conf/cpu_conf.yaml
@@ -4,7 +4,7 @@ env:
   jax_seed: 1337
   half_precision: False
   checkpoint: False
-  input_shape: 28
+  input_shape: (28, 28)
 
 trainer:
   name: SSLTrainer
