--- a/tests/train/conf/cpu_conf.yaml
+++ b/tests/train/conf/cpu_conf.yaml
@@ -2,7 +2,10 @@ env:
   seed: 1337
   numpy_seed: 1337
   jax_seed: 1337
-  checkpoint: False
+  epochs: 100
+  checkpoint:
+    keep: 1
+    keep_every_n_steps: 5
   half_precision: False
   dynamic_scale:
     params: {}
@@ -46,7 +49,6 @@ schedulers:
       params:
         init_value: 0.01
         decay_steps: 1000
-
 
 meter:
   name: SSLMeter
