--- a/tests/train/conf/byol_conf.yaml
+++ b/tests/train/conf/byol_conf.yaml
@@ -36,10 +36,11 @@ model:
           params:
             layer_dims: [4096, 256]
             dropout_prob: 0.0
-            batch_norm: False
+            batch_norm: True
             batch_norm_params:
-                decay_rate: 0.9
-                epsilon: 1e-5
+              use_running_average: True
+              momentum: 0.9
+              epsilon: 1e-5
             activation_name: "relu"
         pred:
           name: MLP
@@ -109,6 +110,7 @@ post_process:
         online_branch_name: branch_0
         target_branch_name: branch_1
         tau: 0.9
+        remove_from_online: [pred_mod]
 
 meter:
   name: SSLMeter
@@ -125,6 +127,6 @@ pipelines:
 dataloader:
   name: cifar10
   params:
-    batch_size: 4096
+    batch_size: 256
     flatten: False
     input_shape: (32,32,3)
