add dynamic scaling tests, create configs module, work on passing pmap(step)

--- a/tests/train/conf/cpu_conf_dynamic_scaling.yaml
+++ b/tests/train/conf/cpu_conf_dynamic_scaling.yaml
@@ -13,6 +13,8 @@ env:
   restore_checkpoint:
     params: {}
   half_precision: False
+  dynamic_scale:
+    params: {}
 
 trainer:
   name: SSLTrainer
