Move config initializations into initialize() call

--- a/tests/train/conf/byol_conf.yaml
+++ b/tests/train/conf/byol_conf.yaml
@@ -13,6 +13,10 @@ env:
   restore_checkpoint:
     params: {}
   half_precision: False
+  dynamic_scale: False
+  dynamic_scale_params: {}
+
+  
 
 trainer:
   name: SSLTrainer
@@ -125,6 +129,6 @@ pipelines:
 dataloader:
   name: cifar10
   params:
-    batch_size: 8
+    batch_size: 256
     flatten: False
     input_shape: (32,32,3)
