--- a/tests/train/conf/cpu_conf_dynamic_scaling.yaml
+++ b/tests/train/conf/cpu_conf_dynamic_scaling.yaml
@@ -13,8 +13,7 @@ env:
   restore_checkpoint:
     params: {}
   half_precision: False
-  dynamic_scale:
-    params: {}
+  dynamic_scale: True
 
 trainer:
   name: SSLTrainer
