--- a/tests/train/conf/byol_conf.yaml
+++ b/tests/train/conf/byol_conf.yaml
@@ -16,8 +16,6 @@ env:
   dynamic_scale: False
   dynamic_scale_params: {}
 
-  
-
 trainer:
   name: SSLTrainer
 
@@ -120,11 +118,55 @@ meter:
 pipelines:
   branches:
     0:
-      name: BYOLOnlinePipeline
-      params: {}
+      augmentations:
+        RandomFlip:
+          params:
+            prob: 1.0
+        ColorTransform:
+          params:
+            prob: 1.0
+            brightness: 0.4
+            contrast: 0.4
+            saturation: 0.2
+            hue: 0.1
+            color_jitter_prob: 0.8
+            to_grayscale_prob: 0.2
+            shuffle: True
+        GaussianBlur:
+          params:
+            prob: 0.1
+        Solarize:
+          params:
+            prob: 0.2
+            threshold: 0.5
+        Clip:
+          params:
+            prob: 1.0
+            x_min: 0
+            x_max: 1
     1:
-      name: BYOLTargetPipeline
-      params: {}
+      augmentations:
+        RandomFlip:
+          params:
+            prob: 1.0
+        ColorTransform:
+          params:
+            prob: 1.0
+            brightness: 0.4
+            contrast: 0.4
+            saturation: 0.2
+            hue: 0.1
+            color_jitter_prob: 0.8
+            to_grayscale_prob: 0.2
+            shuffle: True
+        GaussianBlur:
+          params:
+            prob: 1.0
+        Clip:
+          params:
+            prob: 1.0
+            x_min: 0
+            x_max: 1
 
 dataloader:
   name: cifar10
