work refactoring branch

--- a/tests/train/conf/byol_conf.yaml
+++ b/tests/train/conf/byol_conf.yaml
@@ -23,7 +23,7 @@ model:
   name: SSLModel
   branches:
     0:
-      name: OnlineBranch
+      name: Branch
       params:
         body:
           name: ResNet
@@ -54,7 +54,7 @@ model:
             activation_name: "relu"
 
     1:
-      name: TargetBranch
+      name: Branch
       params:
         body:
           name: ResNet
