update cpu and dino confs with correct branch and pipeline syntax

--- a/tests/train/conf/byol_conf.yaml
+++ b/tests/train/conf/byol_conf.yaml
@@ -25,6 +25,7 @@ model:
     0:
       name: Branch
       stages:
+        stop_gradient: False
         body:
           module: ResNet
           params:
@@ -56,6 +57,7 @@ model:
     1:
       name: Branch
       stages:
+        stop_gradient: True
         body:
           module: ResNet
           params:
