separate pre and post pipelines

--- a/tests/train/conf/byol_conf.yaml
+++ b/tests/train/conf/byol_conf.yaml
@@ -118,6 +118,11 @@ meter:
   name: SSLMeter
 
 pipelines:
+  pre:
+    augmentations:
+      RandomFlip:
+        params:
+          prop: 1.0
   branches:
     0:
       augmentations:
