--- a/tests/train/conf/cpu_conf_dynamic_scaling.yaml
+++ b/tests/train/conf/cpu_conf_dynamic_scaling.yaml
@@ -110,6 +110,11 @@ meter:
   name: SSLMeter
 
 pipelines:
+  pre:
+    augmentations:
+        Identity:
+          params:
+            prob: 1.0
   branches:
     0:
       augmentations:
