--- a/tests/train/conf/dino_conf.yaml
+++ b/tests/train/conf/dino_conf.yaml
@@ -27,9 +27,20 @@ model:
       stages:
         stop_gradient: False
         body:
-          module: VIT
+          module: ViT
           params:
-            config: "ViT-S_16"
+            num_classes:
+            mlp_dim:
+            num_layers:
+            num_heads:
+            patches:
+            hidden_size:
+            representation_size:
+            dropout_rate:
+            attention_dropout_rate:
+            stochastic_depth:
+            classifier:
+            dtype:
         head:
           module: DINO_MLP
           params:
@@ -47,9 +58,20 @@ model:
       stages:
         stop_gradient: True
         body:
-          module: VIT
+          module: ViT
           params:
-            config: "ViT-S_16"
+            num_classes:
+            mlp_dim:
+            num_layers:
+            num_heads:
+            patches:
+            hidden_size:
+            representation_size:
+            dropout_rate:
+            attention_dropout_rate:
+            stochastic_depth:
+            classifier:
+            dtype:
         head:
           module: DINO_MLP
           params:
@@ -103,6 +125,11 @@ meter:
   name: SSLMeter
 
 pipelines:
+  pre:
+    augmentations:
+      RandomFlip:
+        params:
+          prop: 1.0
   branches:
     0:
       augmentations:
