--- a/tests/train/conf/dino_conf.yaml
+++ b/tests/train/conf/dino_conf.yaml
@@ -183,7 +183,8 @@ pipelines:
             x_max: 1
 
 dataloader:
-  name: cifar10
+  platform: torch
+  name: CIFAR10
   params:
     batch_size: 8
     flatten: False
