--- a/tests/train/conf/byol_conf.yaml
+++ b/tests/train/conf/byol_conf.yaml
@@ -176,7 +176,8 @@ pipelines:
             x_max: 1
 
 dataloader:
-  name: cifar10
+  platform: torch
+  name: CIFAR10
   params:
     batch_size: 128
     flatten: False
