--- a/tests/train/conf/cpu_conf_dynamic_scaling.yaml
+++ b/tests/train/conf/cpu_conf_dynamic_scaling.yaml
@@ -128,7 +128,8 @@ pipelines:
             prob: 1.0
 
 dataloader:
-  name: mnist
+  platform: torch
+  name: MNIST
   params:
     batch_size: 32
     input_shape: (784,)
