--- a/tests/train/conf/cpu_conf_dynamic_scaling.yaml
+++ b/tests/train/conf/cpu_conf_dynamic_scaling.yaml
@@ -15,6 +15,7 @@ env:
   half_precision: False
   dynamic_scale: True
   dynamic_scale_params: {}
+  input_shape: (784,)
 
 trainer:
   name: SSLTrainer
