conda update for read-the-docs

--- a/.github/workflows/tests-conda.yml
+++ b/.github/workflows/tests-conda.yml
@@ -50,4 +50,5 @@ jobs:
       shell: bash -l {0}
       run: |
         cd docs
+        conda env update -n ssljax -f readthedocs-requirements.txt
         make html
