implement pre pipeline augmentations for byol

--- a/tests/train/conf/byol_conf.yaml
+++ b/tests/train/conf/byol_conf.yaml
@@ -123,6 +123,9 @@ meter:
 pipelines:
   pre:
     augmentations:
+      RandomCrop:
+        params:
+          prob: 1.0
       RandomFlip:
         params:
           prob: 1.0
