--- a/environment.yml
+++ b/environment.yml
@@ -19,7 +19,9 @@ dependencies:
         - nbsphinx>=0.8.1
         - nbsphinx-link>=1.3.0
         - sphinx-rtd-theme>=0.5.1
+        - sphinxcontrib-bibtex
         - sphinx-autoapi>=1.8.3
+        - sphinx-copybutton
         - ipython
         - tqdm
         - flax
