--- a/.github/workflows/tests-conda.yml
+++ b/.github/workflows/tests-conda.yml
@@ -2,9 +2,7 @@ name: Tests
 
 on:
   pull_request:
-    branches:
-      - dev
-      - master
+    branches: [dev, master]
 
 jobs:
   build-linux:
