Add height and width parameters for randomCrop.

--- a/tests/train/conf/byol_conf.yaml
+++ b/tests/train/conf/byol_conf.yaml
@@ -126,6 +126,8 @@ pipelines:
       RandomCrop:
         params:
           prob: 1.0
+          height: 32
+          width: 32
       RandomFlip:
         params:
           prob: 1.0
