generalize schedulers for learning rates and postprocessing

--- a/tests/train/conf/byol_conf.yaml
+++ b/tests/train/conf/byol_conf.yaml
@@ -97,15 +97,24 @@ optimizers:
 schedulers:
   branches:
     0:
-      name: BYOL
-      params:
-        # note that learning rate scales w/ number of epochs see deepmind implementation
-        base_learning_rate: 0.45
-        warmup_steps: 1000
-        batch_size: 4096
-        # epochs * train_images_per_epoch // batch_size
-        # TODO: for now this is a random number
-        total_steps: 100000
+      learning_rate:
+        name: BYOLlars
+        params:
+          # lr = 0.2 * batchsize/256
+          base_learning_rate: 0.2
+          warmup_steps: 1000
+          batch_size: 4096
+          # TODO: epochs * train_images_per_epoch // batch_size
+          total_steps: 100000
+  post_process:
+    0:
+      tau:
+        name: BYOLema
+        params:
+          # TODO: why is this max_steps and total_steps above (inherit this weirdness from DM implementation)
+          max_steps: 100000
+          initial_value: .996
+
 
 post_process:
   funcs:
@@ -114,7 +123,6 @@ post_process:
       params:
         online_branch_name: branch_0
         target_branch_name: branch_1
-        tau: 0.9
         remove_from_online: [pred]
 
 meter:
@@ -128,9 +136,6 @@ pipelines:
           prob: 1.0
           height: 32
           width: 32
-      RandomFlip:
-        params:
-          prob: 1.0
   branches:
     0:
       augmentations:
